<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".activities.Calculadora_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:padding="16dp"
        android:text="@string/texto_princ"
        android:textColor="@color/grey"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_calculadora" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:padding="16dp"
        android:text="@string/primer_num"
        android:textColor="@color/grey"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/et_numero1"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="@string/num_uno"
        android:inputType="number"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:padding="16dp"
        android:text="@string/segun_num"
        android:textColor="@color/grey"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/et_numero2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/num_dos"
        android:inputType="number"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/sumar" />

        <Button
            android:id="@+id/btn_restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/restar" />

        <Button
            android:id="@+id/btn_multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/multiplicar" />

        <Button
            android:id="@+id/btn_dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/dividir" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>
